<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright © 2020 By Geeks Empire.
  ~
  ~ Created by Elias Fazel
  ~ Last modified 5/2/20 6:51 AM
  ~
  ~ Licensed Under MIT License.
  ~ https://opensource.org/licenses/MIT
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:apps="http://schemas.android.com/apk/res-auto"
    android:id="@+id/MainView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light"
    tools:context=".FoldersShortcuts.AdvanceShortcuts">

    <ScrollView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:cacheColorHint="@android:color/transparent"
        android:fadingEdge="vertical"
        android:fadingEdgeLength="37dp"
        android:requiresFadingEdge="vertical"
        android:scrollbarFadeDuration="270"
        android:scrollbarSize="7dp"
        android:scrollbarStyle="outsideOverlay"
        android:scrollbarThumbVertical="@drawable/scrollbar"
        android:scrollbars="vertical"
        android:smoothScrollbar="true"
        android:verticalScrollbarPosition="left">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/categoryList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:divider="@android:color/transparent"
                android:dividerHeight="5dp"
                android:listSelector="@drawable/ripple_effect_list"
                android:paddingTop="47dp"
                android:saveEnabled="true" />
        </RelativeLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/confirmLayout"
        android:layout_width="140dp"
        android:layout_height="70dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:background="@android:color/transparent"
        android:gravity="center">

        <ImageView
            android:id="@+id/confirmButton"
            android:layout_width="63dp"
            android:layout_height="63dp"
            android:layout_centerInParent="true"
            android:background="@drawable/ripple_effect_confirm"
            android:visibility="invisible" />
    </RelativeLayout>

    <TextView
        android:id="@+id/appSelectedCounterView"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/confirmLayout"
        android:layout_alignTop="@id/confirmLayout"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:shadowColor="@color/default_color_darker"
        android:shadowRadius="10"
        android:textColor="@color/default_color_darker"
        android:textSize="15sp"
        android:textStyle="bold"
        android:visibility="invisible" />

    <RelativeLayout
        android:id="@+id/popupAnchorView"
        android:layout_width="220dp"
        android:layout_height="70dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="37dp"
        android:background="@android:color/transparent"
        android:gravity="bottom"
        android:visibility="invisible" />

    <LinearLayout
        android:id="@+id/autoSelect"
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:visibility="visible"

        android:orientation="horizontal"
        android:weightSum="8">

        <com.google.android.material.button.MaterialButton
            android:layout_weight="2"

            android:id="@+id/autoApps"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="-7dp"
            android:gravity="center"
            android:textAllCaps="false"
            android:text="@string/apps"
            android:textColor="@color/light"
            android:textSize="13sp"
            android:background="@drawable/auto_apps_enable"

            apps:cornerRadius="0dp"
            apps:elevation="13dp"/>

        <com.google.android.material.button.MaterialButton
            android:layout_weight="2"

            android:id="@+id/autoSplit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="-7dp"
            android:gravity="center"
            android:textAllCaps="false"
            android:text="@string/split"
            android:textColor="@color/light"
            android:textSize="12sp"
            android:background="@color/default_color_darker"

            apps:cornerRadius="0dp"
            apps:elevation="13dp"/>

        <com.google.android.material.button.MaterialButton
            android:layout_weight="4"

            android:id="@+id/autoCategories"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="-7dp"
            android:gravity="center"
            android:textAllCaps="false"
            android:text="@string/folderEnable"
            android:textColor="@color/light"
            android:textSize="12sp"
            android:background="@drawable/auto_categories_enable"

            apps:cornerRadius="0dp"
            apps:elevation="13dp"/>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/loadingSplash"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <ImageView
            android:id="@+id/loadingLogo"
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_launcher" />

        <ProgressBar
            android:id="@+id/loadingProgress"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="33dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="-15dp"
            android:indeterminate="true"
            android:indeterminateBehavior="cycle" />

        <TextView
            android:id="@+id/desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:padding="7dp"
            android:shadowColor="@color/dark_transparent"
            android:shadowRadius="25"
            android:text="@string/advanceTitle"
            android:textColor="@color/darker"
            android:textSize="43sp"
            android:textStyle="bold" />
    </RelativeLayout>

</RelativeLayout>