<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright © 2020 By Geeks Empire.
  ~
  ~ Created by Elias Fazel
  ~ Last modified 5/3/20 9:56 AM
  ~
  ~ Licensed Under MIT License.
  ~ https://opensource.org/licenses/MIT
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:apps="http://schemas.android.com/apk/res-auto"
    android:id="@+id/MainView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light"
    tools:context=".ApplicationsShortcuts.NormalAppShortcutsSelectionList">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/preferencesView"
        android:layout_width="47dp"
        android:layout_height="47dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="3dp"
        android:src="@drawable/draw_pref"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/estimatedShortcutCounterView"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:layout_toStartOf="@id/preferencesView"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="3dp"
        android:paddingHorizontal="5dp"
        android:gravity="center_vertical"
        android:ellipsize="start"
        android:singleLine="true"
        android:text="@string/app_name"
        android:textColor="@color/default_color"
        android:textSize="23sp" />

    <LinearLayout
        android:id="@+id/autoSelect"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:layout_below="@id/preferencesView"
        android:layout_centerHorizontal="true"
        android:paddingHorizontal="4dp"
        android:visibility="visible"

        android:orientation="horizontal"
        android:weightSum="8">

        <com.google.android.material.button.MaterialButton
            android:layout_weight="2"

            android:id="@+id/autoApps"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:textAllCaps="false"
            android:text="@string/apps"
            android:textColor="@color/light"
            android:textSize="15sp"

            apps:rippleColor="@color/light_transparent"
            apps:backgroundTint="@color/default_color_darker"
            apps:strokeWidth="3dp"
            apps:strokeColor="@color/default_color_darker"
            apps:cornerRadius="51dp"
            apps:elevation="23dp"/>

        <com.google.android.material.button.MaterialButton
            android:layout_weight="4"

            android:id="@+id/autoSplit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:textAllCaps="false"
            android:text="@string/splitEnable"
            android:textColor="@color/default_color_darker"
            android:textSize="15sp"

            apps:rippleColor="@color/default_color"
            apps:backgroundTint="@color/light"
            apps:strokeWidth="3dp"
            apps:strokeColor="@color/default_color"
            apps:cornerRadius="51dp"
            apps:elevation="23dp" />

        <com.google.android.material.button.MaterialButton
            android:layout_weight="2"

            android:id="@+id/autoCategories"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:textAllCaps="false"
            android:text="@string/folder"
            android:textColor="@color/light"
            android:textSize="12sp"

            apps:rippleColor="@color/light_transparent"
            apps:backgroundTint="@color/default_color_darker"
            apps:strokeWidth="3dp"
            apps:strokeColor="@color/default_color_darker"
            apps:cornerRadius="51dp"
            apps:elevation="23dp"/>
    </LinearLayout>

    <ScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/autoSelect"
        android:cacheColorHint="@android:color/transparent"
        android:fadingEdge="vertical"
        android:fadingEdgeLength="37dp"
        android:requiresFadingEdge="vertical"
        android:scrollbarFadeDuration="270"
        android:scrollbarSize="7dp"
        android:scrollbarStyle="outsideOverlay"
        android:scrollbarThumbVertical="@drawable/scrollbar"
        android:scrollbars="vertical"
        android:smoothScrollbar="true"
        android:verticalScrollbarPosition="left">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@drawable/draw_divider"
                android:dividerHeight="2dp"
                android:isScrollContainer="false"
                android:listSelector="@drawable/ripple_effect_list"
                android:nestedScrollingEnabled="false"
                android:paddingTop="9dp"
                android:paddingBottom="59dp"
                android:paddingStart="9dp"
                android:paddingEnd="30dp"
                android:saveEnabled="true" />
        </RelativeLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/confirmLayout"
        android:layout_width="73dp"
        android:layout_height="73dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="9dp"
        android:layout_marginBottom="13dp"
        android:background="@android:color/transparent"
        android:gravity="center">
        <ImageView
            android:id="@+id/confirmButton"
            android:layout_width="73dp"
            android:layout_height="73dp"
            android:layout_centerInParent="true"
            android:background="@drawable/ripple_effect_confirm"
            android:visibility="invisible" />

    </RelativeLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mixShortcutsSwitchView"
        android:layout_width="wrap_content"
        android:layout_height="73dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginHorizontal="9dp"
        android:layout_marginBottom="13dp"

        android:textAllCaps="false"
        android:text="@string/mixTitle"
        android:textColor="@color/default_color"
        android:textSize="15sp"
        android:textStyle="normal"

        apps:icon="@drawable/w_mix"
        apps:iconGravity="start"
        apps:iconSize="23sp"
        apps:iconTint="@color/red"
        apps:backgroundTint="@color/lighter"
        apps:rippleColor="@color/default_color_transparent"
        apps:cornerRadius="51dp"/>

    <TextView
        android:id="@+id/selected_shortcut_counter_view"
        android:layout_width="73dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/confirmLayout"
        android:layout_alignTop="@id/confirmLayout"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:shadowColor="@color/default_color_darker"
        android:shadowRadius="10"
        android:textColor="@color/default_color_darker"
        android:textSize="15sp"
        android:textStyle="bold"
        android:visibility="invisible" />

    <!-- Indexed Popup Fast Scroller  -->
    <include
        layout="@layout/fast_scroller_index_view"

        android:id="@+id/fastScrollerIndexInclude"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"/>
    <!-- Indexed Popup Fast Scroller  -->

    <RelativeLayout
        android:id="@+id/loadingSplash"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/loadingLogo"
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_launcher" />

        <ProgressBar
            android:id="@+id/loadingProgress"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:indeterminate="true"
            android:indeterminateBehavior="cycle" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/loadingDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="87dp"
            android:gravity="center"
            android:padding="7dp"
            android:shadowColor="@color/dark_transparent_high"
            android:shadowRadius="19"
            android:fontFamily="@font/upcil"
            android:text="@string/app_name"
            android:textColor="@color/darker"
            android:textSize="53sp"
            android:textStyle="bold" />
    </RelativeLayout>

</RelativeLayout>